dpkg (1.18.7) UNRELEASED; urgency=medium

  [ Guillem Jover ]
  * Add new dpkg-source --require-strong-checksums option and change default.
    There is no point in erroring out on this condition when signature issues
    are only warnings, because we cannot guarantee we have functional keys
    for old signatures. Regression introduced in dpkg 1.18.5. Closes: #823428
  * Perl modules:
    - Relax dependency restrictions parsing to allow again sloppy spaces
      around versions, architectures and profile restrictions.
      Regression introduced in 1.18.5. Closes: #823431
    - Add new require_strong_checksums option to Dpkg::Source::Package.
  * Documentation:
    - Shorten example symbol names in dpkg-gensymbols to avoid a mandb
      warning due to unwrappable lines in translations.

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Tue, 03 May 2016 21:07:19 +0200

dpkg (1.18.6) unstable; urgency=medium

  [ Guillem Jover ]
  * Fix file queue tail assignment on file queue pop during unpack. This
    could mess up the file queue in some circumstances and leave behind
    files in the filesystem as «pathname».dpkg-new after configuration
    and without traces of the files in the dpkg database. Closes: #823288
  * Use m_strdup() instead of strdup() in dpkg recursive installation code.
  * Fix off-by-one array allocation in dpkg recursive installation code that
    can cause segfaults.
  * Rename sysctl() “name” variable to “mib”, to avoid a clash with the
    call site function argument with the same name in start-stop-daemon.
    This fixes a build failure on */kFreeBSD systems.
  * Initialize number of entries on initial process scan in start-stop-daemon
    on */kFreeBSD.
  * Packaging:
    - Bump Standards-Version to 3.9.8 (no changes needed).

  [ Updated programs translations ]
  * German (Sven Joachim).
